Fixing image alignment

--- a/assets/css/beer.css
+++ b/assets/css/beer.css
@@ -49,7 +49,7 @@
   width: 100%;
   min-height: 460px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   padding: 2rem;
   border-radius: 28px;
